@@ -1,3 +1,11 @@
+Wed Aug 08 18:52:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py,secore/searchconnection_doctest2.txt:
+	  Add API for performing searches for similar documents.  Currently
+	  just works out which fields should be used for performing the
+	  similarity comparison, but doesn't do the actual similarity
+	  search.
+
 Wed Aug 08 13:37:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: Fix up calculation of significant
